[project]
name = "pokegen"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Lo Giudice",email = "lucas.logiudice@outlook.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (<2.2.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "mlflow (>=2.20.2,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "transformers (>=4.49.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "pokegen", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
